# folly-blossom

./: .CMakeLists.txt.swp  .clang-format  .gitignore  .gitignore.save  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  multiplatform-cmake.yml
data-api/: Data.cpp  Data.h  Data.hpp  FileData.h  FileData.hpp
data-api/image/: Image.cpp  Image.h  Image.hpp
data-api/text/: Text.cpp  Text.h  Text.hpp
data-api/video/: Video.cpp  Video.h  Video.hpp
data/include/data/: FileData.hpp
data/include/data/types/: .Type.hpp.swp  Type.hpp
encryption/: .gitignore  CMakeLists.txt
encryption/include/types/: Byte.hpp
file-api/: File.h  File.hpp  FileActions.hpp
file-data-receive-api/: DataReceive.cpp
file/include/file/: File.hpp
image-api/image/: BMPImage.cpp  Image.hpp  JPGImage.cpp  PNGImage.cpp
include/data/: Data.hpp  FileData.hpp
include/data/render/: Pixel.hpp
include/data/types/: Type.hpp
include/data/types/image/: Image.hpp  ImageOptions.hpp
include/file/: File.hpp  FileActions.hpp
loader-api/: Loader.cpp  Loader.h  Loader.hpp
src/: Run.cpp
